// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Australia 1`] = `
Continent {
  "id": "australia",
  "name": "Australia",
  "territories": Array [],
}
`;

exports[`Australia 2`] = `
Array [
  "Eastern Australia",
  "Indonesia",
  "New Guinea",
  "Western Australia",
]
`;

exports[`North America 1`] = `
Continent {
  "id": "north-america",
  "name": "North America",
  "territories": Array [],
}
`;

exports[`North America 2`] = `
Array [
  "Alaska",
  "Alberta (Western Canada)",
  "Central America",
  "Eastern United States",
  "Greenland",
  "Northwest Territory",
  "Ontario (Central Canada)",
  "Quebec (Eastern Canada)",
  "Western United States",
]
`;
